@@ -149,7 +149,8 @@ Guide</a>.</li>
         <li>Remember the <a href="WebServer.html">Web Server Guide</a>.</li>
         <li>Be aware of the <a href="SMTPServer.html">SMTP Server Guide</a>.</li>
         <li>Rely on the <a href="Programming.html">Programmers Guide</a>.</li>
-        <li>Be amused with the <a href="RandomAreas.html">Random Areas Guide</a>.</li>
+        <li>Be amused with the <a href="RandomAreas.html">Random Areas
+Guide</a>.</li>
       </ul>
       <p>Otherwise, once you have your administrator and a few areas,
 you are technically ready to play!</p>
@@ -286,7 +287,8 @@ installation instructions for the CLASSPATH format. &nbsp;For example,
 if you are using a MYSQL drive, the command might look like:</li>
           <ul>
             <li><code>java
--cp "/myjavastuff/drivers/mysql-connector-java-5.1.6-bin.jar"
+-Xms256m -Xmx1024m -cp
+"/myjavastuff/drivers/mysql-connector-java-5.1.6-bin.jar"
 com.planet_ink.fakedb.DBUpgrade</code></li>
           </ul>
         </ul>
